--- a/public/css/style.css
+++ b/public/css/style.css
@@ -248,6 +248,9 @@ header .intro-text {
 #about {
   padding: 100px 0;
 }
+#about .about-text-2 {
+  padding-top: 60px;
+}
 #about h3 {
   font-size: 22px;
   margin: 0 0 20px;
@@ -293,7 +296,7 @@ header .intro-text {
 }
 /* Services Section */
 #services {
-  padding: 100px 0;
+  padding: 0 0 100px;
   background: white;
   color: black;
 }
